@@ -1,50 +1,26 @@
 /*
- * MOBILE NAVIGATION
- * Source: http://maxfoundry.com/articles/116/responsive-mobile-navigation-in-wordpress
- * Copyright author: John Hartley
- * License: GNU General Public License v3 or later
- * License URI: http://www.gnu.org/licenses/gpl-3.0.html
+ * DISPLAY MOBILE NAV
  */
 
-jQuery(document).ready(function() { 
-	// build <select> dropdown
-	jQuery("<select />").appendTo("div.nav-primary");
+jQuery(document).ready(function($) { 
+	// Hide mobile menu by default	
+	$('.mobile-nav').hide();
 
-	// create option Menu
-	jQuery("<option />", {
-		"selected": "selected",
-		"value": "",
-		"text": objectL10n.navText  
-	}).appendTo(".nav-primary select");
+	// Display mobile menu when clicked	
+	$( ".mobile-nav-toggle" ).click(function() { 
+		$( ".mobile-nav" ).toggle(); 
+	}); 
 
-	// populate
-	jQuery(".nav-primary ul li a").each(function() {
-		var el = jQuery(this);
-		if(el.parents(".nav-primary ul ul ul").length) {
-			// if subpage level two
-			jQuery("<option />", {
-				"value": el.attr("href"),
-				"text":  "- - " + el.text()
-			}).appendTo(".nav-primary select");
-		} 
-		else if(el.parents(".nav-primary ul ul").length) {
-			// if subpage level one
-			jQuery("<option />", {
-				"value": el.attr("href"),
-				"text":  "- " + el.text()
-			}).appendTo(".nav-primary select");
-		} 
-		else { 
-			// if no subpage
-			jQuery("<option />", {
-				"value": el.attr("href"),
-				"text": el.text()
-			}).appendTo(".nav-primary select");
-		}
-	});
+	// Hide mobile submenu by default	
+	$('.mobile-nav .sub-menu').hide();
 
-	// make links work 
-	jQuery(".nav-primary select").change(function() { 
-		window.location = jQuery(this).find("option:selected").val();
-	});
+	// Add toggle that displays mobile submenu
+	var subnavToggle = $( '<button />', { 'class': 'subnav-toggle' })
+		.append( "+" );
+	$( ".mobile-nav .menu" ).find( '.menu-item-has-children > a, .page_item_has_children > a' ).after( subnavToggle );
+
+	// Display mobile submenu when clicked	
+	$( ".subnav-toggle" ).click(function() { 
+		$(this).next('.mobile-nav .children, .mobile-nav .sub-menu').toggle(); 
+	}); 
 });
