@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 5.3
+Version: 5.4
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
@@ -14,14 +14,7 @@ This theme, like WordPress, is licensed under the GPL.
 */
 
 
-/* 
-RESET STYLESHEET 
-Source: http://meyerweb.com/eric/tools/css/reset
-Author: Eric Meyer
-Author URI: http://meyerweb.com/ 
-License: none (public domain) 
-*/
-
+/* RESET STYLESHEET */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, 
 a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, 
 small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, 
@@ -96,11 +89,11 @@ sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; text-decoration:none; color:#e77776;}
 cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
-pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #444;}
-blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #ddd;}
-address {margin:10px 0; font-style:italic;}
+pre {margin:0 0 10px; padding:5px 10px; white-space:pre-wrap; border:1px solid #444;}
+blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #ddd;}
+address {margin:0 0 10px; font-style:italic;}
 p {margin:0 0 10px;}
-hr {height:1px; background:#444; border:0;}
+hr {height:1px; background:#444; border:0; margin:0 0 10px;}
 
 
 /* ALIGNMENTS */
@@ -110,15 +103,15 @@ hr {height:1px; background:#444; border:0;}
 
 
 /* TABLE AND LISTS */
-table {margin:10px 0; border-collapse:collapse;}
+table {margin:0 0 10px; border-collapse:collapse;}
 table, th, td {border:1px solid #444; padding:5px 10px;}
 table th {font-weight:bold;}
 
-ul {list-style:square; margin:10px 0;}
-ol {list-style:decimal; margin:10px 0;}
+ul {list-style:square; margin:0 0 10px;}
+ol {list-style:decimal; margin:0 0 10px;}
 li {margin:0 0 0 20px;}
 li > ul, li > ol {margin:0;}
-dl {margin:10px 0;}
+dl {margin:0 0 10px;}
 dt {font-weight:bold;}
 dd {margin:0 0 0 20px;}
 
@@ -129,7 +122,7 @@ input[type="submit"], input[type="reset"], input[type="button"], button {cursor:
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, button:hover {background:#e77776; color:#ddd;}
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
-select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist; background:#f8f8f8; color:#333;}
+select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist; background:#fff; color:#333;}
 button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
@@ -145,16 +138,21 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* SIDEBAR MENU */
 .nav-primary {width:100%; clear:both; float:left; margin:0 0 20px;}
-.nav-primary select {display:none;}
 .nav-primary ul {padding:0; margin:0; z-index:999; list-style:none;}
 .nav-primary ul li {position:relative; padding:0; margin:0;}
 .nav-primary ul li a {text-decoration:none; padding:5px 0; display:inline-block; width:100%; border-bottom:1px solid #444;}
-.nav-primary .current_page_item > a, .nav-primary .current_page_parent > a {color:#e77776;}
+.nav-primary .current-menu-item > a, .nav-primary .current-menu-parent > a {color:#e77776;}
 
 
 /* SIDEBAR SUBMENU */
 .nav-primary ul ul a {width:95%; margin:0 0 0 5%;}
 .nav-primary ul ul ul a {width:90%; margin:0 0 0 10%;}
+.nav-primary ul ul ul ul a {width:85%; margin:0 0 0 15%;}
+
+
+/* SIDEBAR MOBILE MENU */
+.mobile-nav-toggle {display:none;}
+.mobile-nav {display:none;}
 
 
 /* SIDEBAR MENU TITLE */
@@ -251,7 +249,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .comment-list li {margin:0; padding:0;}
 .comment-list .children > li {margin:0 0 0 10px;}
 .comment-body {background:none; border:1px solid #444; border-radius:5px; padding:10px; margin:0 0 20px;}
-.comment-content {margin:10px 0;}
+.comment-content {padding:10px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
 .comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.45em;} 
 .comments-title {margin:0 0 20px;}
@@ -295,7 +293,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* MOBILE */
 @media screen and (max-width:767px) { 
 	/* BODY AND CONTAINER */
-	body {font-size:1em; line-height:1.2em;}
+	body {font-size:1em; line-height:1.5em;}
 	body.custom-background {background-image:none !important;}
 	#container {width:96%; padding:10px 2%; margin:0 auto 0; background:#333 url('images/back.png');}
 
@@ -312,8 +310,15 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.logo img {padding:0;}
 
 	/* SIDEBAR MENU */
-	.nav-primary ul {display:none;} 
-	.nav-primary select {width:100%; display:block; margin:0 auto 0; font-size:1em; line-height:1.2em;}
+	.nav-primary {display:none;} 
+
+	/* SIDEBAR MOBILE MENU */
+	.mobile-nav-toggle {clear:both; display:block; margin:0 0 20px; padding:10px 2%; background:#444; color:#ddd; cursor:pointer;}
+	.mobile-nav-toggle:hover {color:#fff;}
+	.mobile-nav {clear:both; padding:10px 20px 10px 0; margin:0 5px 20px; background:none; border:2px solid #ddd;}
+	.mobile-nav .subnav-toggle {float:right; display:block; margin:-45px 0 0; padding:2px 15px;}
+	.mobile-nav ul {list-style:none;}
+	.mobile-nav ul li a {display:block; margin:0 0 10px 0; padding:0 0 12px; border-bottom:2px dotted #ddd; text-decoration:none;}
 
 	/* SIDEBAR MENU TITLE */
 	.nav-primary-title {display:none;}
